ecommerce/ecommerce-boundedContext/ecommerce-webapp-angular/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-webapp-angular
spec:
  selector:
    matchLabels:
      app: ecommerce-webapp-angular
#      tier: ecommerce-web-reactive
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: ecommerce-webapp-angular
#        tier: ecommerce-web-reactive
        track: stable
    spec:
      containers:
        - name: ecommerce-webapp-angular
          image: degloba/ecommerce-web-angular
          ports:
            - name: http
              containerPort: 4200
