ecommerce/ecommerce-boundedContext/ecommerce-webapp-angular/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-webapp-angular-service
  namespace: default
spec:
  selector:
    app: ecommerce-webapp-angular
    tier: frontend
    track: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 4200
  type: NodePort
  externalIPs:
  - 192.168.1.10 # Network IP of my Mac
